bk_ida/gccida/g3/find_comparison_args
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_comparison_args/src/cse.c:3587:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code  find_comparison_args( 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_comparison_args/src/cse.c:3588:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_comparison_args/src/cse.c:3591:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *pmode1, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_comparison_args/src/cse.c:3592:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *pmode2) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_comparison_args/src/cse.c:3595:4: error: expected ';' after expression
rtx v7; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_comparison_args/src/cse.c:3595:5: error: use of undeclared identifier 'v7'
rtx v7; // r13 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_comparison_args/src/cse.c:3597:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v9; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_comparison_args/src/cse.c:3608:4: error: expected ';' after expression
rtx exp; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_comparison_args/src/cse.c:3611:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v24; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_comparison_args/src/cse.c:3615:1: error: use of undeclared identifier 'v7'
v7 = *parg2; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_comparison_args/src/cse.c:3623:52: error: use of undeclared identifier 'v7'
if ( ( _WORD)v9 == COMPARE && const_int_rtx[64] == v7 ) 
                                                   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_comparison_args/src/cse.c:3625:5: error: non-object type 'double (double)' is not assignable
exp = rtx; 
~~~ ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_comparison_args/src/cse.c:3634:5: error: non-object type 'double (double)' is not assignable
exp = rtx; 
~~~ ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_comparison_args/src/cse.c:3646:5: error: non-object type 'double (double)' is not assignable
exp = rtx; 
~~~ ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_comparison_args/src/cse.c:3650:10: error: member reference base type 'double (double)' is not a structure or union
rtx = exp->fld[0].rtx; 
      ~~~^ ~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_comparison_args/src/cse.c:3651:1: error: use of undeclared identifier 'v7'
v7 = ( rtx)exp[1]; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_comparison_args/src/cse.c:3653:31: error: use of undeclared identifier 'v7'
if ( const_tiny_rtx[0][v8] != v7 ) 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_comparison_args/src/cse.c:3658:26: error: use of undeclared identifier 'machine_mode'
v13 = canon_hash( rtx, ( machine_mode)v8); 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_comparison_args/src/cse.c:3680:5: error: non-object type 'double (double)' is not assignable
exp = first_same_value->exp; 
~~~ ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/find_comparison_args/src/obj/cse.o] Error 1
